examples/errors/error_incompatible_types.cay
// Error测试：不兼容类型
public class TestIncompatibleTypes {
    public static void main() {
        boolean b = true;
        int x = b;
        println(x);
    }
}
